Dodanie zdjęć(Drozdek98)

--- a/Strona/Index.html
+++ b/Strona/Index.html
@@ -26,7 +26,7 @@
                 <h2>Poznaj miłośników zwierząt, którzy traktują pupile jak rodzinę</h2>
                 <p>Opiekunowie i spacerowicze dostępni na całym świecie!</p>
                 <!-- Zdjęcie główne (dodaj ścieżkę w atrybucie src) -->
-                <img src="img/main-image.jpg" class="img-fluid" alt="Zdjęcie z pieskiem">
+                <img src="img.jpg" class="img-fluid" alt="Zdjęcie z pieskiem">
             </div>
         </div>
     </section>
